[package]
name = "dev-env-manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive development environment manager"
license = "MIT"
repository = "https://github.com/yourusername/dev-env-manager"

[[bin]]
name = "devenv"
path = "src/main.rs"

[dependencies]
# Core dependencies
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
walkdir = "2.4"

# Cross-platform support
which = "4.4"
os_info = "3.7"

# File system operations
fs_extra = "1.3"
tempfile = "3.8"

# Network and HTTP
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

# Logging and output
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
console = "0.15"

# Configuration and state management
config = "0.14"
home = "0.5"

# Process management
sysinfo = "0.30"

# Security and hashing
sha2 = "0.10"
ring = "0.17"
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
crossterm = "0.27"
ratatui = "0.24"

[dev-dependencies]
tempfile = "3.8"
